fixing z-indexes for map

--- a/app/assets/stylesheets/map.css.scss
+++ b/app/assets/stylesheets/map.css.scss
@@ -48,6 +48,7 @@ body,html {
   width: 100%;
   
   height: 400px;
+  z-index: 500;
 }
 #map.affix {
   position: fixed;
